--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ itsdangerous==2.0.1
 Jinja2==3.0.1
 lxml==4.6.3
 MarkupSafe==2.0.1
+python-dotenv==0.19.0
 pytz==2021.1
 requests==2.26.0
 selenium==3.141.0
