--- a/flask-site-nginx.conf
+++ b/flask-site-nginx.conf
@@ -6,6 +6,7 @@ server {
     location @yourapplication {
         include 					uwsgi_params;
         uwsgi_pass					unix:///tmp/uwsgi.sock;
+		uwsgi_read_timeout			600;
 		uwsgi_connect_timeout		600;
 		proxy_connect_timeout       600;
 		proxy_send_timeout          600;
